# FactOrCap

./: .gitignore  README.md  README_STARTUP.md  background.js  config.template.js  content.css  content.js  hello.html  manifest.json  package.json  popup.css  popup.js
.github/workflows/: build.yml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  feeds.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: verify.py
backend/app/db/: session.py
backend/app/ingestion/: claimreview.py  extract.py  rss.py  worker.py
backend/app/models/: db.py  schemas.py
backend/app/pipeline/: aggregate.py  embedding.py  factcheck.py  nli.py  normalize.py  retrieval.py  verify.py  wikipedia.py
backend/tests/: test_aggregate.py  test_claimreview.py  test_normalize.py  test_wikipedia.py
claim_model/: .gitignore  README.md  predict_claim.py  requirements.txt  serve_claim_detector.py  train_claim_detector.py
claim_model/artifacts/: metadata.json
penis/: README.md  bert.py  content.js  hello.html  manifest.json
popup/: popup.css  popup.html  popup.js
