[project]
name = "factorcap-backend"
version = "0.1.0"
description = "Fact-checking backend for the FactOrCap Chrome extension."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.14",
    "sentence-transformers>=3.3",
    "transformers>=4.46",
    "torch>=2.5",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "python-dateutil>=2.9",
    "cachetools>=5.5",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
factorcap-ingest = "app.ingestion.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
